Fixed some alignment issues.

--- a/src/components/badge/Badge.css
+++ b/src/components/badge/Badge.css
@@ -2,10 +2,16 @@
     border-radius: 0.358rem;
     padding: 0.3rem 0.5rem;
     text-align: center;
-    vertical-align: baseline;
+    vertical-align: middle;
     font-size: 85%;
     font-weight: 600;
     color: white;
+    word-wrap: break-word;
+}
+@media only screen and (max-width: 768px) {
+    .badge {
+        padding: 0.2em 0.1em;
+    }
 }
 .badge-danger {
     background-color: #ea5455;
