--- a/src/components/search-list/SearchList.css
+++ b/src/components/search-list/SearchList.css
@@ -6,7 +6,7 @@
     color: white;
 }
 tr {
-    height: 2.5em;
+    height: 3em;
 }
 
 .not-found-record {
